@@ -1,7 +1,7 @@
-	$Id: VERSION,v 1.29 2010-06-22 22:27:21 guru Exp $
+	$Id: VERSION,v 1.30 2010-10-09 22:26:20 guru Exp $
 
 	GMT - The Generic Mapping Tools
 	===============================
 	
-Latest GMT version available from this site:	4.5.3
-Release date:					July 15, 2010
+Latest GMT version available from this site:	4.5.4
+Release date:					Oct 15, 2010
