@@ -1,20 +1,20 @@
 ; Script generated by the Inno Setup Script Wizard.
-; $Id: GMTsetup_pdf.iss,v 1.17 2010-07-13 01:21:42 guru Exp $
+; $Id: GMTsetup_pdf.iss,v 1.18 2010-10-09 22:26:20 guru Exp $
 ; Creates Setup file for the GMT PDF documentation only
 ; SEE THE DOCUMENTATION FOR DETAILS ON CREATING INNO SETUP SCRIPT FILES!
 
 [Setup]
 AppName=GMT
 AppId=gmt4win
-AppVerName=GMT 4.5.3
-AppVersion=4.5.3
+AppVerName=GMT 4.5.4
+AppVersion=4.5.4
 AppPublisherURL=http://gmt.soest.hawaii.edu
 AppUpdatesURL=http://gmt.soest.hawaii.edu
 DefaultDirName={sd}\programs\GMT
 DefaultGroupName=GMT
 AllowNoIcons=true
 LicenseFile=C:\GMTdev\GMT\LICENSE.TXT
-OutputBaseFilename=GMT4.5.3_pdf_install
+OutputBaseFilename=GMT4.5.4_pdf_install
 MinVersion=0,4.0.1381
 OutputDir=C:\GMTdev\INSTALLERS
 
