@@ -1,5 +1,5 @@
 <HTML>
-<!--  $Id: gmt_releases_template.html,v 1.12 2010-06-22 22:27:22 guru Exp $  -->
+<!--  $Id: gmt_releases_template.html,v 1.13 2010-10-09 22:26:20 guru Exp $  -->
 <TITLE>GMT Release Notes</TITLE>
 <BODY bgcolor="#ffffff">
 <CENTER><H2>GMT Release Notes</CENTER></h2><P>
@@ -13,8 +13,13 @@ version of GMT (the CVS version) see the
 <A HREF="gmt_cvs.html" target="_blank">CVS instructions</A>.
 <HR>
 <UL>
+<LI><B>GMT 5</B>
+<OL>
+<LI>15-OCT-2010: GMT Version 5.0.0a available for testing via cvs only.
+</OL>
 <LI><B>GMT 4</B>
 <OL>
+<LI>15-OCT-2010: GMT Version 4.5.4 Released
 <LI>15-JUL-2010: GMT Version 4.5.3 Released
 <LI>15-JAN-2010: GMT Version 4.5.2 Released
 <LI>20-SEP-2009: GMT Version 4.5.1 Released
